--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -21,4 +21,4 @@
   <div id="root"></div>
 </body>
 
-</html>
+</html> -->
